# XRLinuxDriver

./: .fpm  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE.md  PKGBUILD  README.md  default.nix  flake.nix  hooks.install  license_public_key.pem  mkdocs.yml  package.nix  shell.nix
.github/: FUNDING.yml
.github/workflows/: release.yml
cmake/: FindCurl.cmake  FindLIBEVDEV.cmake  FindOpenSSL.cmake  Findlibusb.cmake
docker-build/: Dockerfile  Dockerfile.aarch64  build-and-install.sh  init.sh  prepare.sh  run-build.sh  run-fpm.sh
docs/: 6dof-from-3dof-opentrack-neuralnet.md  development.md  index.md  mouse-and-joystick-modes.md  opentrack-app.md  opentrack-listener.md  requirements.txt
examples/: CMakeLists.txt
examples/debug_d3/: CMakeLists.txt
examples/debug_d3/src/: debug.c
examples/debug_d4/: CMakeLists.txt
examples/debug_d4/src/: debug.c
examples/mcu_firmware/: CMakeLists.txt
examples/mcu_firmware/src/: upgrade.c
fpm/: build  postinstall  postupgrade  preinstall  preuninstall
include/: buffer.h  config.h  connection_pool.h  curl.h  device.h  devices.h  driver.h  epoch.h  files.h  imu.h  imu_time_sync.h  ipc.h  logging.h  memory.h  multitap.h  outputs.h  plugins.h  runtime_context.h  sideview_plugin.h  state.h  strings.h  system.h  virtual_display_plugin.h  viture.h  viture_one_sdk.h  xreal.h
include/devices/: rayneo.h  rokid.h  viture.h  viture_legacy.h  xreal.h
include/features/: breezy_desktop.h  sbs.h  smooth_follow.h
include/plugins/: breezy_desktop.h  custom_banner.h  device_license.h  drift_offset.h  gamescope_reshade_wayland.h  gamescope_reshade_wl.h  metrics.h  neck_saver.h  opentrack.h  opentrack_listener.h  opentrack_source.h  sideview.h  smooth_follow.h  virtual_display.h
include/sdks/: rayneo.h  rokid.h  viture_device.h  viture_device_carina.h  viture_glasses_constants.h  viture_glasses_provider.h  viture_macros.h  viture_macros_public.h  viture_protocol.h  viture_protocol_public.h  viture_version.h
include/wl_client/: gamescope_reshade.h
interface_lib/: CMakeLists.txt
interface_lib/include/: crc32.h  device3.h  device4.h
interface_lib/src/: crc32.c  device3.c  device4.c
lib/aarch64/viture/: libopencv_calib3d.so.406  libopencv_core.so.406  libopencv_highgui.so.406  libopencv_imgcodecs.so.406  libopencv_video.so.4.6.0
lib/x86_64/viture/: libopencv_flann.so.4.2  libopencv_videoio.so.4.2.0  libusb-1.0.so.0
modules/rayneoSDKHeaders/base/: FXRDebug.h  FXRError.h  FXRMacro.h  FXRType.h
modules/rayneoSDKHeaders/device/: XRDevice.h
modules/rayneoSDKHeaders/device/usb/: XRDeviceState.h  XRPacket.h
modules/rayneoSDKHeaders/interface/: FXRApi.h  FXRClient.h  FXRServer.h
modules/rayneoSDKHeaders/ipc/: FXRProtocol.h
modules/rayneoSDKHeaders/openxr/: openxr.h  openxr_platform.h  openxr_platform_defines.h  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
nix/: default.nix
src/: buffer.c  config.c  connection_pool.c  curl.c  device3.c  device3.h  device4.c  device4.h  devices.c  driver.c  epoch.c  files.c  imu.c  imu_time_sync.c  ipc.c  logging.c  multitap.c  outputs.c  plugins.c  runtime_context.c  sideview_plugin.c  state.c  strings.c  system.c  virtual_display_plugin.c  viture.c  xreal.c
src/devices/: rayneo.c  rokid.c  viture.c  viture_legacy.c  xreal.c
src/features/: breezy_desktop.c  sbs.c  smooth_follow.c
src/plugins/: breezy_desktop.c  custom_banner.c  device_license.c  drift_offset.c  gamescope_reshade_wayland.c  gamescope_reshade_wl.c  metrics.c  neck_saver.c  opentrack_listener.c  opentrack_source.c  sideview.c  smooth_follow.c  virtual_display.c
src/wl_client/: gamescope_reshade.c
systemd/: xr-driver.service  xreal-air-driver.service
test_setup/xr_driver/: setup
udev/: 60-xreal-air.rules  70-rayneo-xr.rules  70-rokid-xr.rules  70-uinput-xr.rules  70-viture-xr.rules  70-xreal-xr.rules  80-rayneo-xr.rules  80-viture-xr.rules  80-xreal-xr.rules  xreal_air.rules
viture-build/: Dockerfile  build-and-install.sh  prepare.sh
xr_driver/: manifest
